Ajustements de la mise en page pour plus de visibilité des images + correction affichage titres

--- a/css_et_images/style.css
+++ b/css_et_images/style.css
@@ -140,7 +140,7 @@ img
 {
     border-radius: 15px 15px 0px 0px;
     width: 100%;
-    height: 110px;
+    height: 200px;
     margin-bottom: -15px;
     object-fit: cover;
 }
@@ -256,9 +256,13 @@ h3
 }
 
 /*partie champs de recherche*/
+    .recherche
+    {
+        margin-right: 10px;
+    }
     .champ-de-recherche 
     {
-        width: 250px;
+        width: 85%;
     }
 
     .texte-bouton-recherche
@@ -286,6 +290,7 @@ h3
         padding-right: 100px;
         display: flex;
         align-items: center;
+        flex-basis: 100%;
     }
     .differentsfiltres 
     {
@@ -394,13 +399,13 @@ h3
         box-shadow: 1px 1px 5px grey;
         transition: transform .1s;
         padding: 5px;
-        height: 145px;
+        height: 160px;
         width: 100%;
     }
     .img-populaire-container
     {
         height: 100%;
-        width: 45%;
+        width: 50%;
         border-radius: 15px 0px 0px 15px;
     }
 
@@ -426,15 +431,15 @@ h3
 
     .etoilespop1
     {
-        margin-top: 20px;
+        margin-top: 45px;
     }
     .etoilespop2
     {
-        margin-top: 15px;
+        margin-top: 30px;
     }
     .etoilespop3
     {
-        margin-top: 20px;
+        margin-top: 45px;
     }
 
 /*fin de la partie hotels populaires du site*/
@@ -464,7 +469,7 @@ h3
         transition: transform .1s;
         padding: 5px;
         width: auto;
-        height: 200px;
+        height: 300px;
         margin-left: 10px;
         margin-right: 15px;
     }
@@ -530,7 +535,7 @@ h3
             margin-right: 15px;
             box-shadow: 1px 1px 5px grey;
             transition: transform .1s;
-            height: 191px;
+            height: 300px;
             width: auto;
     }
     .offre > img
@@ -810,26 +815,30 @@ h3
     {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: auto 1fr 1fr 1fr;
+        grid-template-rows: auto 1fr;
         background-color: #f2f2f2;
         padding-left: 15px;
         padding-right: 15px;
         margin-left: 10px;
         margin-right: 10px;
         border-radius: 15px;
+        width: auto;
     }
-
+    .vignettes-populaire
+    {
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
     .hotelpopulaire
     {
-        display: flex;
-        flex-flow: column wrap;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 1fr auto;
         border-radius: 15px;
         background-color: white;
         box-shadow: 1px 1px 5px grey;
         transition: transform .1s;
         padding: 6px;
-        max-height: 165px;
-        width: auto;
     }
 
     .titre-populaires
@@ -841,24 +850,27 @@ h3
     .hotelpopulaire1
     {
         margin-bottom: 40px;
+        grid-row: 1;
     }
 
     .hotelpopulaire2
     {
+        grid-row: 2;
         margin-bottom: 40px;
     }
 
     .hotelpopulaire3
     {
+        grid-row: 3;
         margin-bottom: 40px;
     }
 
     .img-populaire-container
     {
-        height: 100%;
-        width: 45%;
-        border-radius: 15px 0px 0px 15px;
-        margin-right: -5px;
+        width: 100%;
+        grid-column: 1;
+        grid-row-start: 1;
+        grid-row-end: 3;
     }
 
     .img-populaire-container > img 
@@ -869,29 +881,33 @@ h3
     }
 
     .texte-populaire
-{
-    margin-top: -15px;
-    max-width: 58%;
-}
+    {
+        grid-column: 2;
+        margin-top: -15px;
+        max-width: 90%;
+    }
 
-.texte-populaire > p
-{
-    margin-left: 7px;
-    margin-bottom: 4px;
-}
+    .texte-populaire > p
+    {
+        margin-left: 7px;
+        margin-bottom: 4px;
+    }
 
-.etoilespop1
-{
-    margin-top: 30px;
-}
-.etoilespop2
-{
-    margin-top: 30px;
-}
-.etoilespop3
-{
-    margin-top: 30px;
-}
+    .etoilespop1
+    {
+        grid-column: 2;
+        margin-top: 10px;
+    }
+    .etoilespop2
+    {
+        grid-column: 2;
+        margin-top: 10px;
+    }
+    .etoilespop3
+    {
+        grid-column: 2;
+        margin-top: 10px;
+    }
 /*fin de la partie hotels populaires*/
 
 /*partie activités du site*/
@@ -899,7 +915,7 @@ h3
     {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: auto 2fr 1fr 1fr 2fr;
+        grid-template-rows: auto 226px 64px 64px 226px;
         max-height: 650px;
     }
 
@@ -907,7 +923,7 @@ h3
     {
         grid-row: 1;
         grid-column: 1;
-        margin-left: 40px;
+        margin-left: 20px;
     }
 
     .offre
@@ -942,7 +958,7 @@ h3
     .offre2 > img
     {
     width: 100%;
-    height: 80%;
+    height: 85%;
     object-fit: cover;
     }
     .offre3
@@ -962,11 +978,12 @@ h3
         grid-column: 4;
         grid-row-start: 2;
         grid-row-end: 4;
+
     }
     .offre4 > img
     {
     width: 100%;
-    height: 75%;
+    height: 85%;
     object-fit: cover;
     }
     .offre5
@@ -978,7 +995,7 @@ h3
     .offre5 > img
     {
     width: 100%;
-    height: 100%;
+    height: 80%;
     object-fit: cover;
     }
     .offre6
@@ -1224,7 +1241,6 @@ h3
     {
         grid-row: 1;
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: auto 1fr;
         background-color: #f2f2f2;
         padding-left: 10px;
@@ -1232,6 +1248,11 @@ h3
         padding-bottom: 30px;
     }
 
+    .vignettes-populaire
+    {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
     .hotelpopulaire
     {
         display: flex;
@@ -1242,40 +1263,33 @@ h3
         transition: transform .1s;
         padding: 5px;
         width: auto;
-        
-
     }
 
     .titre-populaires
     {
         display: grid;
-        grid-template-columns: 100% 1fr;
-        grid-column: 1;
-        padding-left: 10px;
+        grid-template-columns: 60% 1fr 1fr;
+        width: 100%;
     }
     .icone-graphique
     {
         grid-column: 3;
-        padding-left: 10px;
+        text-align: end;
+        margin-right: 20px;
     }
     .hotelpopulaire1
     {
-        grid-row: 2;
         grid-column: 1;
         width: 90%;
     }
-
     .hotelpopulaire2
     {
-
-        grid-row: 2;
         grid-column: 2;
         width: 90%;
     }
 
     .hotelpopulaire3
     {
-        grid-row: 2;
         grid-column: 3;
         width: 90%;
     }
@@ -1284,7 +1298,7 @@ h3
     {
         border-radius: 15px 15px 0px 0px;
         width: 100%;
-        height: 110px;
+        height: 150px;
         margin-bottom: -15px;
     }
 
@@ -1306,7 +1320,11 @@ h3
         margin-top: -5px;
         margin-bottom: 5px;
     }
-
+    .img-hotel-container > img 
+    {
+        width: 100%;
+        height: 210px;
+    }
     .etoilespop1
     {
         margin-top: 0px;
@@ -1344,9 +1362,10 @@ h3
         border-radius: 15px;
         box-shadow: 1px 1px 5px grey;
         transition: transform .1s;
-        padding: 5px;
+        padding-left: 5px;
+        padding-right: 5px;
         max-width: 80%;
-        height: 200px;
+        height: 300px;
         margin-left: 5%;
         justify-content: center;
     }
@@ -1399,7 +1418,7 @@ h3
     #activite
     {
             display: grid;
-            grid-template-rows: 37px repeat(3, 215px);
+            grid-template-rows: 37px repeat(3, 1fr);
             grid-template-columns: 49% 49%;
             margin-left: 5px;
     }
@@ -1419,7 +1438,7 @@ h3
             box-shadow: 1px 1px 5px grey;
             transition: transform .1s;
             max-width: 80%;
-            height: 200px;
+            height: 350px;
     }
     .offre1
     {
